--- a/openstack/hermes/templates/es-manager-ingress.yaml
+++ b/openstack/hermes/templates/es-manager-ingress.yaml
@@ -12,12 +12,12 @@ metadata:
 spec:
   tls:
      - secretName: elasticsearch-manager
-       hosts: [{{.Values.elk_elasticsearch_manager_endpoint_host_public}}]
+       hosts: [{{.Values.hermes.elasticsearch.manager_endpoint_host_public}}]
   rules:
-    - host: {{.Values.elk_elasticsearch_manager_endpoint_host_public}}
+    - host: {{.Values.hermes.elasticsearch.manager_endpoint_host_public}}
       http:
         paths:
         - path: /
           backend:
             serviceName: es-manager
-            servicePort: {{.Values.elk_elasticsearch_manager_port_internal}}
+            servicePort: {{.Values.hernes.elasticsearch.manager_port_internal}}
