--- a/openstack/hermes/templates/es-manager-secret.yaml
+++ b/openstack/hermes/templates/es-manager-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.elk_elasticsearch_manager_tls_key }}
+{{- if .Values.hermes.elasticsearch.manager_tls_key }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -7,6 +7,6 @@ metadata:
   name: elasticsearch-manager
 
 data:
-  tls.crt: {{ default "" .Values.hermes_elasticsearch_manager_tls_crt | b64enc | quote }} 
-  tls.key: {{ default "" .Values.hermes_elasticsearch_manager_tls_key | b64enc | quote }}
+  tls.crt: {{ default "" .Values.hermes.elasticsearch.manager_tls_crt | b64enc | quote }} 
+  tls.key: {{ default "" .Values.hermes.elasticsearch.manager_tls_key | b64enc | quote }}
 {{- end }}
