--- a/openstack/hermes/templates/es-manager-service.yaml
+++ b/openstack/hermes/templates/es-manager-service.yaml
@@ -14,4 +14,4 @@ spec:
     role:  manager
   ports:
     - name: manager
-      port: {{.Values.hermes_elasticsearch_manager_port_internal}}
+      port: {{.Values.hermes.elasticsearch.manager_port_internal}}
