Added vcenter-exporters sub-chart to infra-monitoring

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -95,6 +95,9 @@ bios_exporter:
 apic_exporters:
   enabled: false
 
+vcenter-exporters:
+  enabled: false
+
 thousandeyes_exporter:
   enabled: false
 
