--- a/openstack/maia/files/snmp-exporter/n7k-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/n7k-generator.yaml
@@ -13,6 +13,7 @@ modules:
     - 1.3.6.1.4.1.9.9.187.1.2.4.1.7
     - 1.3.6.1.4.1.9.9.187.1.2.4.1.8
     - ifDescr
+    - ifType
     - ifOperStatus
     - ifAdminStatus
     - ifInOctets
