--- a/openstack/maia/files/snmp-exporter/n7k-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/n7k-generator.yaml
@@ -25,6 +25,7 @@ modules:
     - entSensorValue
     - entSensorType
     - entPhysicalName
+    - entPhysicalClass
     - cpmCPUMemoryFree
     - cpmCPUMemoryUsed
     - cpmCPUTotalPhysicalIndex
