--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -24,6 +24,7 @@ modules:
       - ifOutDiscards
       - entSensorValue
       - entSensorType
+      - entPhysicalClass
       - entPhysicalName
       - cpmCPUMemoryFree
       - cpmCPUMemoryUsed
