--- a/openstack/maia/files/snmp-exporter/n7k-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/n7k-generator.yaml
@@ -41,3 +41,4 @@ modules:
     - clmLicenseExpiryDate
     - clmNoOfLicenseCurrentUsages
     - clagAggPortListInterfaceIndexList
+    - cseSysCPUUtilization
