[snmp-exporter] more asr04 and n7k metrics
cherry picked from master branch and cleaned up

--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -12,3 +12,36 @@ modules:
       - 1.3.6.1.4.1.9.9.187.1.2.4.1.6
       - 1.3.6.1.4.1.9.9.187.1.2.4.1.7
       - 1.3.6.1.4.1.9.9.187.1.2.4.1.8
+      - 1.3.6.1.2.1.1.3
+      - ifDescr
+      - ifType
+      - ifOperStatus
+      - ifAdminStatus
+      - ifInOctets
+      - ifOutOctets
+      - ifInErrors
+      - ifOutErrors
+      - ifInDiscards
+      - ifOutDiscards
+      - entSensorValue
+      - entSensorType
+      - entPhysicalClass
+      - entPhysicalName
+      - cpmCPUMemoryFree
+      - cpmCPUMemoryUsed
+      - cpmCPUTotalPhysicalIndex
+      - cpmCPUTotal5sec
+      - cHsrpGrpVirtualIpAddr
+      - cHsrpGrpStandbyState
+      - cefcFRUPowerOperStatus
+      - cefcFRUPowerAdminStatus
+      - ccmHistoryRunningLastChanged
+      - ccmHistoryRunningLastChanged
+      - ciscoImageString
+      - clagAggPortListPorts
+      - clmgmtLicenseFeatureName
+      - clmgmtLicenseValidityPeriodRemaining
+      - clmgmtLicenseType
+      - ceqfpUtilProcessingLoad
+      - ceqfpMemoryResInUse
+      - ceqfpMemoryResFree
