Role out x1.32xlarge & m5.96xlarge as public flavors into all regions

--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -200,7 +200,7 @@ spec:
     vcpus: "128"
     ram: "1992704"
     disk: "64"
-    is_public: false
+    is_public: true
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
@@ -218,7 +218,7 @@ spec:
     vcpus: "128"
     ram: "1468416"
     disk: "64"
-    is_public: false
+    is_public: true
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
