--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -57,3 +57,9 @@ dependencies:
     repository: file://vendor/apic_exporters
     version: 1.0.0
     condition: apic_exporters.enabled
+
+  - name: ipmi-exporter
+    alias: ipmi_exporter
+    repository: file://vendor/ipmi-exporter
+    version: 0.1.0
+    condition: ipmi_exporter.enabled
