refine federation and alerts

--- a/global/prometheus-kubernetes/values.yaml
+++ b/global/prometheus-kubernetes/values.yaml
@@ -41,6 +41,28 @@ prometheus-kubernetes-global:
   #  - alertmanager.eu-de-1.cloud.sap
   #  - alertmanager.eu-nl-1.cloud.sap
 
+# List of metrics that get federated from the regional Prometheis.
+# Per convention all metrics with the `global:` prefix are federated.
+allowedMetrics:
+  - global:.+
+  - ALERTS
+  - alertmanager_.+
+  - kube_node_.+
+  - kube_node_status_capacity
+  - kube_pod_container_resource_requests_cpu_cores
+  - kube_pod_container_resource_requests_memory_bytes
+  - node_cpu_seconds_total
+  - node_memory_MemTotal_bytes
+  - node_memory_MemFree_bytes
+  - node_memory_Cached_bytes
+  - node_memory_Buffers_bytes
+  - node_memory_Slab_bytes
+  - probe_(dns|duration|http|success).*
+  - prometheus_build_version
+  - up
+  - vice_president_token_count_remaining
+  - vice_president_sso_certificate_expires
+
 # Basic alerts for global Prometheus.
 alerts:
   prometheus: kubernetes-global
