[hermes] edits for es-manager, adding namespace

--- a/openstack/hermes/templates/es-manager-deployment.yaml
+++ b/openstack/hermes/templates/es-manager-deployment.yaml
@@ -24,14 +24,14 @@ spec:
         component: elasticsearch
         role: manager
       annotations:
-        checksum/application.conf.tpl: {{ include "bermes/templates/etc/_application.conf.tpl" . | sha256sum }}
+        checksum/application.conf.tpl: {{ include "hermes/templates/etc/_application.conf.tpl" . | sha256sum }}
     spec:
       nodeSelector:
         zone: farm
       volumes:
         - name: es-etc
           configMap:
-            name: es-manager-etc
+            name: es-manager-hermes-etc
       containers:
       - name: es-manager
         image: {{.Values.docker_repo}}/elk-elasticsearch-manager:{{.Values.hermes_image_version_elasticsearch_manager}}
