--- a/openstack/hermes/templates/es-manager-ingress.yaml
+++ b/openstack/hermes/templates/es-manager-ingress.yaml
@@ -11,12 +11,12 @@ metadata:
 spec:
   tls:
      - secretName: elasticsearch-manager-hermes
-       hosts: [{{.Values.endpoint_host_public}}.{{.Values.global.region}}.{{.Values.global.domain}}]
+       hosts: [{{.Values.hermes.elasticsearch.manager_endpoint_host_public}}]
   rules:
-    - host: {{.Values.endpoint_host_public}}.{{.Values.global.region}}.{{.Values.global.domain}}
+    - host: {{.Values.hermes.elasticsearch.manager_endpoint_host_public}}
       http:
         paths:
         - path: /
           backend:
             serviceName: es-manager-hermes
-            servicePort: {{.Values.port_internal}}
+            servicePort: {{.Values.hermes.elasticsearch.manager_port_internal}}
