--- a/openstack/hermes/templates/elasticsearch-etc-configmap.yaml
+++ b/openstack/hermes/templates/elasticsearch-etc-configmap.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: elasticsearch-etc
+  namespace: hermes
   labels:
     system: openstack
     service: audit
