--- a/openstack/hermes/templates/elasticsearch-pvclaim.yaml
+++ b/openstack/hermes/templates/elasticsearch-pvclaim.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: hermes-elasticsearch
+  namespace: hermes
 spec:
   annotations:
     "helm.sh/resource-policy": keep
