--- a/openstack/hermes/templates/es-manager-etc-configmap.yaml
+++ b/openstack/hermes/templates/es-manager-etc-configmap.yaml
@@ -2,7 +2,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: es-manager-etc
+  name: es-manager-hermes-etc
+  namespace: hermes
   labels:
     system: openstack
     service: audit
@@ -10,4 +11,4 @@ metadata:
 
 data:
   elasticsearch-application.conf: |
-{{ include "elk/templates/etc/_application.conf.tpl" . | indent 4 }}
+{{ include "hermes/templates/etc/_application.conf.tpl" . | indent 4 }}
