--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -63,3 +63,9 @@ dependencies:
     repository: file://vendor/ipmi-exporter
     version: 0.1.0
     condition: ipmi_exporter.enabled
+
+  - name: vcenter-exporters
+    alias: vcenter_exporters
+    repository: file://vendor/vcenter-exporters
+    version: 0.1.0
+    condition: vcenter_exporters.enabled
