Added memory rezervation and schedule to dedicated aggregate to bigvm spec

--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -204,6 +204,8 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+      "quota:memory_reservation": "1992704"
+      "aggregate_instance_extra_specs:bigvm": "true"
   - name: "x1e.16xlarge"
     id: "260"
     vcpus: "64"
@@ -222,3 +224,6 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+      "quota:memory_reservation": "1468416"
+      "aggregate_instance_extra_specs:bigvm": "true"
+
