hermes: fix es-manager service name in ingress config

--- a/openstack/hermes/templates/es-manager-ingress.yaml
+++ b/openstack/hermes/templates/es-manager-ingress.yaml
@@ -18,5 +18,5 @@ spec:
         paths:
         - path: /
           backend:
-            serviceName: es-manager-hermes
+            serviceName: es-manager
             servicePort: {{.Values.hermes.elasticsearch.manager_port_internal}}
