Fixing aggregate filtering to flavor

--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -205,7 +205,7 @@ spec:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
       "quota:memory_reservation": "1992704"
-      "aggregate_instance_extra_specs:bigvm": "true"
+      "aggregate_instance_extra_specs:bighv": "2"
   - name: "x1e.16xlarge"
     id: "260"
     vcpus: "64"
@@ -225,5 +225,5 @@ spec:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
       "quota:memory_reservation": "1468416"
-      "aggregate_instance_extra_specs:bigvm": "true"
+      "aggregate_instance_extra_specs:bighv": "2"
 
