--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -69,3 +69,9 @@ dependencies:
     repository: file://vendor/vcenter-exporters
     version: 0.1.0
     condition: vcenter_exporters.enabled
+
+  - name: blackbox-exporter
+    alias: blackbox_exporter
+    repository: file://vendor/blackbox-exporter
+    version: 0.1.0
+    condition: blackbox_exporter.enabled
