extend clusterrole for kubelet, cadvisor metrics

--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -113,15 +113,16 @@ rbac:
   create: true
 
 # ServiceAccount to use for the Prometheus server.
+# Note that a ServiceAccount with name `default` cannot be created.
+# Instead the generated name will be used.
 serviceAccount:
   create: true
 
   # Optional name of the service account.
   # If not provided one will be generated in the format: prometheus-<name>.
-  name:
+  name: ""
 
 # Thanos configuration.
-
 thanos:
   # Enable Thanos components and Prometheus sidecar.
   enabled: false
