fix kubelet, cadvisor scraping for k8s 1.10+

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -44,6 +44,35 @@ global:
     collector:
       enabled: true
 
+# Metric whitelist.
+allowedMetrics:
+  cAdvisor:
+    - container_cpu_cfs_periods_total
+    - container_cpu_cfs_throttled_seconds_total
+    - container_cpu_cfs_throttled_periods_total
+    - container_cpu_usage_seconds_total
+    - container_fs_inodes_total
+    - container_fs_limit_bytes
+    - container_fs_usage_bytes
+    - container_last_seen
+    - container_memory_usage_bytes
+    - container_memory_working_set_bytes
+    - container_network_receive_bytes_total
+    - container_network_transmit_bytes_total
+
+  kubelet:
+    - kubelet_pod_start_latency_microseconds
+    - kubelet_running_pod_count
+    - process_max_fds
+    - process_open_fds
+
+  kubeAPIServer:
+    - apiserver_request_count
+    - apiserver_request_latencies_bucket
+    - etcd_object_counts
+    - process_max_fds
+    - process_open_fds
+
 # Values for operated Prometheus collector.
 # Only used if global.prometheus_operated.enabled: true.
 prometheus-collector-operated:
