--- a/system/prometheus-rules/controlplane-prometheus-rules/templates/prometheus-aggregations.yaml
+++ b/system/prometheus-rules/controlplane-prometheus-rules/templates/prometheus-aggregations.yaml
@@ -5,7 +5,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 
 metadata:
-  name: {{ printf controlplane-%s" $path | replace "/" "-" }}
+  name: {{ printf "controlplane-%s" $path | replace "/" "-" }}
   labels:
     type: alerting-rules
     prometheus: {{ required ".Values.prometheusName missing" $values.prometheusName | quote }}
