--- a/system/prometheus-rules/scaleout-prometheus-rules/Chart.yaml
+++ b/system/prometheus-rules/scaleout-prometheus-rules/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for Kubernetes
-name: scaleout
+name: scaleout-prometheus-rules
 version: 0.1.0
