--- a/openstack/nova/templates/create-bigvm-aggregates-job.yaml
+++ b/openstack/nova/templates/create-bigvm-aggregates-job.yaml
@@ -1,3 +1,4 @@
+{{ if ne .Values.global.region "staging" }}
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
@@ -48,3 +49,4 @@ spec:
               value: {{ .Values.global.region }}
             - name: OS_PASSWORD
               value: {{ .Values.global.nova_service_password | required "Please set Values.global.nova_service_password" | quote }}
+{{ end }}
