[nova][bigvm] fix env variable: OS_IDENTITY_API_VERSION=3

--- a/openstack/nova/templates/create-bigvm-aggregates-job.yaml
+++ b/openstack/nova/templates/create-bigvm-aggregates-job.yaml
@@ -35,7 +35,7 @@ spec:
               value: "nova-migration"
             - name: OS_AUTH_URL
               value: {{ include "keystone_url" . }}
-            - name: OS_AUTH_VERSION
+            - name: OS_IDENTITY_API_VERSION
               value: "3"
             - name: OS_USERNAME
               value: {{ .Values.global.nova_service_user | default "nova" }}
