[Chart-testing][Keystone] Fix truthy value

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -11,17 +11,17 @@ global:
   dbPassword: ""
 # imageRegistry: hub.global.cloud.sap
 
-debug: False
-insecure_debug: False
+debug: false
+insecure_debug: false
 
 # run a db_sync to migrate the db schema ?
-run_db_migration: False
+run_db_migration: false
 
 # ignore invalid role assignments
-skipRepairRoleAssignments: False
+skipRepairRoleAssignments: false
 
 # suppress pre-deployment region check
-skipRegionCheck: False
+skipRegionCheck: false
 
 # current keystone release
 release: rocky
