--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -1,4 +1,28 @@
 dependencies:
+  - name: ntp-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
+
+  - name: oomkill-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.1
+
+  - name: event-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.1
+
+  - name: k8s-secrets-certificate-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
+
+  - name: blackbox-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.0
+
+  - name: kubernetes-prometheus-rules
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
+
   - name: prometheus-node-exporter
     repository: https://kubernetes-charts.storage.googleapis.com/
     version: 1.3.2
