--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -135,7 +135,7 @@ prometheus-frontend-operated:
   #  - alertmanager.eu-nl-1.cloud.sap
 
 # Deploy basic set of Prometheus alert and aggregation rules for monitoring Kubernetes.
-kube-rules:
+prometheus-kubernetes-rules:
   prometheusName: kubernetes
   prometheusCollectorName: collector-kubernetes
 
