--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -102,30 +102,30 @@ unittest:
 pgmetrics:
   name: glance
   customMetrics:
-     openstack_glance_image:
-       query: "SELECT id, name, status, size, owner, visibility, COUNT(*) AS gauge from images where deleted='false' GROUP BY id"
-       metrics:
-         - id:
-             usage: "LABEL"
-             description: "Image ID"
-         - name:
-             usage: "LABEL"
-             description: "Image Name"
-         - status:
-             usage: "LABEL"
-             description: "Image Status"
-         - size:
-             usage: "LABEL"
-             description: "Image Size"
-         - owner:
-             usage: "LABEL"
-             description: "Image Owner"
-         - visibility:
-             usage: "LABEL"
-             description: "Image visibility"
-         - gauge:
-             usage: "GAUGE"
-             description: "Image Count"
+    openstack_glance_image:
+      query: "SELECT id, name, status, size, owner, visibility, COUNT(*) AS gauge from images where deleted='false' GROUP BY id"
+      metrics:
+        - id:
+            usage: "LABEL"
+            description: "Image ID"
+        - name:
+            usage: "LABEL"
+            description: "Image Name"
+        - status:
+            usage: "LABEL"
+            description: "Image Status"
+        - size:
+            usage: "LABEL"
+            description: "Image Size"
+        - owner:
+            usage: "LABEL"
+            description: "Image Owner"
+        - visibility:
+            usage: "LABEL"
+            description: "Image visibility"
+        - gauge:
+            usage: "GAUGE"
+            description: "Image Count"
 
 postgresql:
   custom_repository: true
@@ -154,63 +154,63 @@ postgresql:
 logging:
   formatters:
     context:
-        class: oslo_log.formatters.ContextFormatter
+      class: oslo_log.formatters.ContextFormatter
     default:
-        format: "%(message)s"
+      format: "%(message)s"
   handlers:
     stdout:
-        class: StreamHandler
-        args: "(sys.stdout,)"
-        formatter: context
+      class: StreamHandler
+      args: "(sys.stdout,)"
+      formatter: context
     "null":
-        class: logging.NullHandler
-        args: "()"
-        formatter: default
+      class: logging.NullHandler
+      args: "()"
+      formatter: default
     sentry:
-        class: raven.handlers.logging.SentryHandler
-        level: ERROR
-        args: "()"
+      class: raven.handlers.logging.SentryHandler
+      level: ERROR
+      args: "()"
   loggers:
     root:
-        handlers: "null"
-        level: WARNING
+      handlers: "null"
+      level: WARNING
     glance:
-        handlers: stdout, sentry
-        level: DEBUG
+      handlers: stdout, sentry
+      level: DEBUG
     glance_store:
-        handlers: stdout, sentry
-        level: DEBUG
+      handlers: stdout, sentry
+      level: DEBUG
     amqp:
-        handlers: stdout, sentry
-        level: WARNING
+      handlers: stdout, sentry
+      level: WARNING
     amqplib:
-        handlers: stdout, sentry
-        level: WARNING
+      handlers: stdout, sentry
+      level: WARNING
     boto:
-        handlers: stdout, sentry
-        level: WARNING
+      handlers: stdout, sentry
+      level: WARNING
     eventlet.wsgi.server:
-        handlers: stdout, sentry
-        level: INFO
+      handlers: stdout, sentry
+      level: INFO
     sqlalchemy:
-        handlers: stdout, sentry
-        level: WARNING
+      handlers: stdout, sentry
+      level: WARNING
     suds:
-        handlers: stdout, sentry
-        level: WARNING
+      handlers: stdout, sentry
+      level: WARNING
 
 vice_president: true
 
 imageVersionGlanceNanny: null
 
 nanny:
-  enabled: False
+  enabled: false
   # debug mode - no script run in the containers, just a sleep loop
-  debug: True
+  debug: true
   # run the nanny every n minutes
   interval: 60
   db_purge:
-    enabled: True
+    enabled: true
     # purge deleted db entries older than n days
     older_than: 14
     # delete at max number of entries in one run
