Adjust seed to use values in logstash stanza

--- a/openstack/hermes/templates/seed.yaml
+++ b/openstack/hermes/templates/seed.yaml
@@ -27,5 +27,5 @@ spec:
         ec2_creds:
           - user: {{ required ".Values.hermes.swift_backup.ec2_user is missing" .Values.hermes.swift_backup.ec2_user }}
             user_domain: {{ required ".Values.hermes.swift_backup.ec2_user_domain is missing" .Values.hermes.swift_backup.ec2_user_domain }}
-            access: {{ required ".Values.hermes.swift_backup.ec2_access is missing" .Values.hermes.swift_backup.ec2_access }}
-            key: {{ required ".Values.hermes.swift_backup.ec2_key is missing" .Values.hermes.swift_backup.ec2_key }}
+            access: {{ required ".Values.logstash.access_key_id is missing" .Values.logstash.access_key_id }}
+            key: {{ required ".Values.logstash.secret_access_key is missing" .Values.logstash.secret_access_key }}
