[hermes] Added missing end stanza in seed.yaml

--- a/openstack/hermes/templates/seed.yaml
+++ b/openstack/hermes/templates/seed.yaml
@@ -29,3 +29,4 @@ spec:
             user_domain: {{ required ".Values.hermes.swift_backup.ec2_user_domain is missing" .Values.hermes.swift_backup.ec2_user_domain }}
             access: {{ required ".Values.logstash.access_key_id is missing" .Values.logstash.access_key_id }}
             key: {{ required ".Values.logstash.secret_access_key is missing" .Values.logstash.secret_access_key }}
+{{- end }}
