--- a/openstack/hermes/templates/seed.yaml
+++ b/openstack/hermes/templates/seed.yaml
@@ -22,7 +22,7 @@ spec:
           - name: {{ required ".Values.hermes.swift_backup.swift_container is missing" .Values.hermes.swift_backup.swift_container }}
             metadata:
               meta-web-listings: 'true'
-              meta-web-listings-label: {{ required ".Values.hermes.swift_backup.meta_web_listing_label is missing" .Values.hermes.swift_backup.meta_web_listing_label }}
+              meta-web-listings-label: {{ required ".Values.hermes.swift_backup.meta_web_listings_label is missing" .Values.hermes.swift_backup.meta_web_listings_label }}
               read: .r:*,.rlistings
         ec2_creds:
           - user: {{ required ".Values.hermes.swift_backup.ec2_user is missing" .Values.hermes.swift_backup.ec2_user }}
