--- a/openstack/manila/values.yaml
+++ b/openstack/manila/values.yaml
@@ -105,6 +105,13 @@ nanny:
 
 pgmetrics:
   enabled: true
+  resources:
+    requests:
+      memory: 128Mi
+      cpu: 50m
+    limits:
+      memory: 512Mi
+      cpu: 200m
   customMetrics:
     openstack_manila_share_servers:
       query: "SELECT host, share_network_id, status, COUNT(*) AS count_gauge FROM share_servers GROUP BY host, share_network_id, status"
