discover helm charts in all folders

--- a/ci/config.yaml
+++ b/ci/config.yaml
@@ -8,12 +8,9 @@ validate-yaml: true
 validate-maintainers: false
 check-version-increment: false
 
-# Find helm charts in these directories.
+# Consider helm charts in all directories.
 chart-dirs:
-  - common
-  - global
-  - openstack
-  - system
+  - .
 
 # Don't look here.
 excluded-charts:
@@ -24,3 +21,4 @@ excluded-charts:
 chart-repos:
   - stable=https://kubernetes-charts.storage.googleapis.com
   - sapcc=https://charts.eu-de-2.cloud.sap
+  - sapcc-global=https://charts.global.cloud.sap
