Add new domain_support_tools_viewer role
This is to support the use case that customers with their own domain can be given access to additional support tools, like e.g. the universal search.

--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -45,6 +45,7 @@ spec:
   - cloud_volume_admin
   - cloud_baremetal_admin
   - cloud_support_tools_viewer
+  - domain_support_tools_viewer
 
   domains:
   - name: Default
