fix prober chart

--- a/prometheus-exporters/blackbox-exporter/templates/configmap.yaml
+++ b/prometheus-exporters/blackbox-exporter/templates/configmap.yaml
@@ -8,7 +8,7 @@ metadata:
 
 data:
   blackbox.yaml: |
-{{ include "kube-monitoring/charts/blackbox-exporter/templates/_blackbox.yaml.tpl" . | indent 4 }}
+{{ include (print $.Template.BasePath  "/_blackbox.yaml.tpl") . | indent 4 }}
 {{- if .Values.additional_modules }}
 {{ tpl .Values.additional_modules . | indent 6 }}
 {{- end}}
