--- a/prometheus-exporters/blackbox-exporter/templates/deployment.yaml
+++ b/prometheus-exporters/blackbox-exporter/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - name: config
               mountPath: /etc/blackbox-exporter
         - name: {{ .Chart.Name }}-configmap-reloader
-          image: "{{ .Values.global.configmap_reload.image.repository }}:{{ .Values.global.configmap_reload.image.tag }}"
+          image: "{{ .Values.configmap_reload.image.repository }}:{{ .Values.configmap_reload.image.tag }}"
           args:
             - --volume-dir=/etc/blackbox-exporter
             - --webhook-url=http://localhost:{{ .Values.service.port }}/-/reload
