--- a/prometheus-exporters/blackbox-exporter/values.yaml
+++ b/prometheus-exporters/blackbox-exporter/values.yaml
@@ -1,6 +1,7 @@
-# Default values for blackbox-exporter.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+#global:
+#  region:
+#  domain:
+
 replicaCount: 1
 
 image:
@@ -18,4 +19,7 @@ ingress:
   disco: false
   hostName: prober
 
-
+configmap_reload:
+  image:
+    repository: jimmidyson/configmap-reload
+    tag: v0.2.2
