--- a/prometheus-exporters/blackbox-exporter/Chart.yaml
+++ b/prometheus-exporters/blackbox-exporter/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: A Helm chart for Kubernetes
+description: Prometheus blackbox exporter chart.
 name: blackbox-exporter
-version: 0.1.0
+version: 1.0.0
