--- a/prometheus-exporters/nfs-exporter/values.yaml
+++ b/prometheus-exporters/nfs-exporter/values.yaml
@@ -7,3 +7,7 @@ metrics:
 
   # Name of the Prometheus by which this exporter is scraped.
   prometheus: kubernetes
+
+#aci:
+#  apic_user:
+#  apic_password:
