--- a/prometheus-exporters/ns-exporter/templates/prometheus-alerts.yaml
+++ b/prometheus-exporters/ns-exporter/templates/prometheus-alerts.yaml
@@ -1,5 +1,5 @@
 {{- $values := .Values }}
-{{- if and $values.enabled $values.alerts.enabled }}
+{{- if $values.alerts.enabled }}
 {{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
 ---
 apiVersion: monitoring.coreos.com/v1
