--- a/prometheus-exporters/ns-exporter/templates/secret.yaml
+++ b/prometheus-exporters/ns-exporter/templates/secret.yaml
@@ -1,4 +1,3 @@
-{{ if .Values.enabled }}
 kind: Secret
 apiVersion: v1
 
@@ -7,5 +6,4 @@ metadata:
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
 data:
-  password: {{ .Values.password | b64enc }}
-{{ end }}
+  password: {{ required ".Values.password missing" .Values.password | b64enc }}
