--- a/prometheus-exporters/ns-exporter/values.yaml
+++ b/prometheus-exporters/ns-exporter/values.yaml
@@ -20,3 +20,5 @@ alerts:
   enabled: true
   # Name of the Prometheus to which the alerts should be assigned to.
   prometheus: openstack
+
+# password:
