fix ipmi svc discovery

--- a/prometheus-exporters/ipmi-service-discovery/values.yaml
+++ b/prometheus-exporters/ipmi-service-discovery/values.yaml
@@ -1,3 +1,15 @@
+global:
+  # imageRegistry:
+  ipmi_service_discovery:
+    ironic:
+      enabled: false
+    netbox:
+      enabled: false
+      # api_token:
+
+  # ipmi_exporter_user:
+  # ipmi_exporter_user_passwd:
+
 app_env: "production"
 image: monsoon/ipmi-service-discovery
 tag: v0.3.14
