--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -1,22 +1,22 @@
 dependencies:
   - name: arista-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
 
   - name: arista-service-discovery
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
 
   - name: blackbox-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
 
   - name: cloudprober-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
 
   - name: event-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.1
 
   - name: fluent-bit
@@ -25,16 +25,16 @@ dependencies:
     condition: fluent-bit.enabled
 
   - name: ironic-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
     condition: ironic-exporter.enabled
 
   - name: ipmi-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
 
   - name: ipmi-service-discovery
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
 
   - name: kube-state-metrics
@@ -42,23 +42,23 @@ dependencies:
     version: 1.5.0
 
   - name: kubernetes-prometheus-rules
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
 
   - name: k8s-secrets-certificate-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
 
   - name: ns-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
 
   - name: ntp-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
 
   - name: oomkill-exporter
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.1
 
   - name: prometheus-node-exporter
@@ -67,11 +67,11 @@ dependencies:
 
   - name: prometheus-server
     alias: prometheus-collector-operated
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.1.20
     condition: global.prometheus_operated.collector.enabled
 
   - name: prometheus-server
     alias: prometheus-frontend-operated
-    repository: https://charts.global.cloud.sap
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.1.20
