--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -20,7 +20,7 @@ prometheus-infra-frontend:
 
   ingress:
     enabled: true
-    host: prometheus-infra.scaleout
+    host: prometheus-infra-frontend.scaleout
 
   persistence:
     enabled: true
