[grafanasix] fix paths

--- a/openstack/grafanasix/templates/grafana-deployment.yaml
+++ b/openstack/grafanasix/templates/grafana-deployment.yaml
@@ -88,9 +88,9 @@ spec:
             - /minitrue.sh
           env:
             - name: PATH_IN
-              value: "/gitsync_in"
+              value: "/gitsync_in/grafana-content"
             - name: PATH_OUT
-              value: "/minitrue_out"
+              value: "/minitrue_out/grafana-content"
             - name: SLEEP_TIME_IN_SEC
               value: "60"
           volumeMounts:
