--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -2,6 +2,7 @@ dependencies:
   - name: arista-exporter
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
+    condition: global.arista_exporter.enabled
 
   - name: arista-service-discovery
     repository: https://charts.eu-de-2.cloud.sap
@@ -32,10 +33,12 @@ dependencies:
   - name: ipmi-exporter
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
+    condition: global.ipmi_exporter.enabled
 
   - name: ipmi-service-discovery
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.0
+    condition: global.ipmi_service_discovery.enabled
 
   - name: kube-state-metrics
     repository: https://kubernetes-charts.storage.googleapis.com/
