ns-exporter values fix

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -251,3 +251,8 @@ fluent-bit:
 
   serviceAccount:
     create: true
+
+# OpenStack namespace exporter.
+# Disabled by default. Enabled via regional secrets.
+ns-exporter:
+  enabled: false
