--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -51,6 +51,7 @@ dependencies:
   - name: ns-exporter
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
+    condition: ns-exporter.enabled
 
   - name: ntp-exporter
     repository: https://charts.eu-de-2.cloud.sap
