add persistence for prometheus-infra-collector

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -51,15 +51,18 @@ prometheus_infra_collector:
     host: prometheus-infra-collector
 
   persistence:
-    enabled: false
+    enabled: true
+    # prom-operator does not support other accessModes than RWO
+    # accessMode: ReadWriteOnce
+    size: 10Gi
 
   resources:
     requests:
+      cpu: 0.25
+      memory: 1Gi
+    limits:
       cpu: 0.5
       memory: 2Gi
-    limits:
-      cpu: 1
-      memory: 4Gi
 
   rbac:
     create: true
