[grafanasix] minitrue version in secrets

--- a/openstack/grafanasix/templates/grafana-deployment.yaml
+++ b/openstack/grafanasix/templates/grafana-deployment.yaml
@@ -82,7 +82,7 @@ spec:
             - name: grafana-git
               mountPath: /tmp/git
         - name: "minitrue"
-          image: hub.global.cloud.sap/monsoon/grafana-minitrue:v0.0.6
+          image: hub.global.cloud.sap/monsoon/grafana-minitrue:{{.Values.grafana.minitrue_version}}
           imagePullPolicy: {{.Values.image.pullPolicy}}
           command:
             - /minitrue.sh
