--- a/openstack/grafanasix/values.yaml
+++ b/openstack/grafanasix/values.yaml
@@ -66,6 +66,7 @@ grafana:
   disco: true
   image: grafana/grafana
   image_version: 6.1.6
+  minitrue_version: 0.0.7
   # image_version: 5.4.3
   seeding_enabled: true
   log_level: 'Info'
