--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -58,11 +58,11 @@ prometheus_infra_collector:
 
   resources:
     requests:
-      cpu: 0.25
-      memory: 1Gi
+      cpu: 10m
+      memory: 5Gi
     limits:
-      cpu: 0.5
-      memory: 2Gi
+      cpu: 50m
+      memory: 10Gi
 
   rbac:
     create: true
