set resource constraints for prom infra collector

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -58,10 +58,10 @@ prometheus_infra_collector:
 
   resources:
     requests:
-      cpu: 10m
+      cpu: 0.25
       memory: 5Gi
     limits:
-      cpu: 50m
+      cpu: 1.0
       memory: 10Gi
 
   rbac:
