update prometheus infra collector resource constraints

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -15,12 +15,6 @@ global:
     enabled: true
     prometheus: infra-collector
 
-#  altas:
-#     ironic:
-#       enabled: false
-#  arista_exporter:
-#    enabled: true
-
 rbac:
   create: true
   name: infra-monitoring-edit
@@ -58,11 +52,8 @@ prometheus_infra_collector:
 
   resources:
     requests:
-      cpu: 0.25
-      memory: 5Gi
-    limits:
-      cpu: 1.0
-      memory: 10Gi
+      cpu: 200m
+      memory: 2Gi
 
   rbac:
     create: true
