--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -77,6 +77,9 @@ cloudprober_exporter:
 netapp_exporter:
   enabled: false
 
+netapp-perf-exporter:
+  enabled: false
+
 arista_sd:
   enabled: false
 
@@ -84,6 +87,9 @@ arista_exporter:
   enabled: false
 
 atlas_sd:
+  enabled: false 
+
+apic_exporters:
   enabled: false
 
 snmp_exporter:
