--- a/common/mariadb/values.yaml
+++ b/common/mariadb/values.yaml
@@ -34,9 +34,10 @@ readinessProbe:
 
 backup:
   enabled: false
+  image: monsoon/backup-tools
+  image_version: v0.5.15
   interval_full: 1 days
   interval_incr: 1 hours
-  image_version: v0.5.15
   os_password: DEFINED-IN-REGION-SECRETS
   os_username: db_backup
   os_user_domain: Default
