set resource constraints for prometheus infra

--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -40,11 +40,8 @@ prometheus-infra-frontend:
   # Kubernetes resource requests and limits for this Prometheus.
   resources:
     requests:
-      cpu: 0.25
+      cpu: 200m
       memory: 2Gi
-    limits:
-      cpu: 0.5
-      memory: 4Gi
 
 # Collector Prometheus are only accessible after presenting a valid SSO certificate.
 authentication:
