--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -25,6 +25,8 @@ modules:
       - ifOutDiscards
       - entSensorValue
       - entSensorType
+      - entSensorThresholdSeverity
+      - entSensorThresholdValue
       - entPhysicalClass
       - entPhysicalName
       - cpmCPUMemoryFree
