--- a/openstack/maia/files/snmp-exporter/n7k-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/n7k-generator.yaml
@@ -25,6 +25,8 @@ modules:
     - ifOutDiscards
     - entSensorValue
     - entSensorType
+    - entSensorThresholdSeverity
+    - entSensorThresholdValue
     - entPhysicalName
     - entPhysicalClass
     - cpmCPUMemoryFree
