[compute_support] asign cloud_baremetal_admin in ccadmin

--- a/openstack/ironic/templates/seed.yaml
+++ b/openstack/ironic/templates/seed.yaml
@@ -315,13 +315,10 @@ spec:
         inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
       roles:
-      - project: compute_support
+      - project: master
         role: cloud_baremetal_admin
-      - project: compute_tools
+      - project: cloud_admin
         role: cloud_baremetal_admin
-      - domain: ccadmin
-        role: baremetal_admin
-        inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
       roles:
       - project: network_support
