[ironic] restore standard compute support team project privileges

--- a/openstack/ironic/templates/seed.yaml
+++ b/openstack/ironic/templates/seed.yaml
@@ -315,10 +315,17 @@ spec:
         inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
       roles:
+      - project: compute_support
+        role: baremetal_admin
+      - project: compute_tools
+        role: cloud_baremetal_admin
       - project: master
         role: cloud_baremetal_admin
       - project: cloud_admin
         role: cloud_baremetal_admin
+      - domain: ccadmin
+        role: baremetal_admin
+        inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
       roles:
       - project: network_support
