--- a/openstack/maia/files/snmp-exporter/n7k-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/n7k-generator.yaml
@@ -17,6 +17,7 @@ modules:
     - ifType
     - ifOperStatus
     - ifAdminStatus
+    - ifHighSpeed
     - ifInOctets
     - ifOutOctets
     - ifInErrors
