--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -18,6 +18,7 @@ modules:
       - ifOperStatus
       - ifAdminStatus
       - ifHighSpeed
+      - ifLastChange
       - ifInOctets
       - ifOutOctets
       - ifInErrors
