--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -46,6 +46,7 @@ modules:
       - clmgmtLicenseFeatureName
       - clmgmtLicenseValidityPeriodRemaining
       - clmgmtLicenseType
+      - clmgmtLicenseStatus
       - ceqfpUtilProcessingLoad
       - ceqfpMemoryResInUse
       - ceqfpMemoryResFree
