[nova][cinder] Schedule pods AZ-aware
nova-compute and cinder-volume pods are only needed in the respective
AZ. Therefore, we leverage kubernetes' `nodeAffinity` feature to let
those pods be scheduled on nodes in the matching failure-domain. This is
not a hard specification but a suggestion to the scheduler.

--- a/openstack/cinder/templates/vcenter_datacenter_cinder_deployment.yaml
+++ b/openstack/cinder/templates/vcenter_datacenter_cinder_deployment.yaml
@@ -32,6 +32,7 @@ template: |{{`
           name: cinder-volume-vmware-{{ name }}
       spec:
         hostname: cinder-volume-vmware-{{ name }}
+`}}{{ tuple "{{ availability_zone }}" | include "kubernetes_pod_az_affinity" | indent 8 }}{{`
         containers:
         - name: cinder-volume-vmware-{{ name }}
           image: `}}{{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-cinder-scheduler:{{.Values.imageVersionCinderScheduler | default .Values.imageVersion | required "Please set cinder.imageVersion or similar" }}{{`
