--- a/openstack/maia/files/snmp-exporter/n7k-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/n7k-generator.yaml
@@ -44,4 +44,6 @@ modules:
     - ciscoImageString
     - clmLicenseExpiryDate
     - clmNoOfLicenseCurrentUsages
+    - clmLicenseFlag
+    - clmNoOfMissingUsageLicenses
     - clagAggPortListInterfaceIndexList
