--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -47,6 +47,8 @@ modules:
       - clmgmtLicenseValidityPeriodRemaining
       - clmgmtLicenseType
       - clmgmtLicenseStatus
+      - clmgmtLicenseEndDate
+      - clmgmtLicensePeriodUsed
       - ceqfpUtilProcessingLoad
       - ceqfpMemoryResInUse
       - ceqfpMemoryResFree
