--- a/global/prometheus-kubernikus/templates/prometheus-sso-cert.yaml
+++ b/global/prometheus-kubernikus/templates/prometheus-sso-cert.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 
 metadata:
-  name: prometheus-sso-cert
+  name: prometheus-kubernikus-sso-cert
 
 data:
   sso.crt: {{ required ".Values.authentication.ssoCert missing" .Values.authentication.ssoCert | b64enc | quote }}
