--- a/global/prometheus-kubernikus/values.yaml
+++ b/global/prometheus-kubernikus/values.yaml
@@ -28,7 +28,7 @@ prometheus-kubernikus-global:
 
   # Comment the `prometheus-sso-cert` if SSO is not used (aka authentication.enabled=false)
   secrets:
-    - prometheus-sso-cert
+    - prometheus-kubernikus-sso-cert
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
@@ -54,6 +54,7 @@ regionList:
   - "la-br-1"
   - "na-ca-1"
   - "na-us-1"
+  - "na-us-2"
   - "na-us-3"
   - "qa-de-1"
 
