--- a/openstack/maia/files/snmp-exporter/n7k-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/n7k-generator.yaml
@@ -12,6 +12,9 @@ modules:
     - 1.3.6.1.4.1.9.9.187.1.2.4.1.6
     - 1.3.6.1.4.1.9.9.187.1.2.4.1.7
     - 1.3.6.1.4.1.9.9.187.1.2.4.1.8
+    - cbgpPeer2FsmEstablishedTime
+    - cbgpPeer2AdminStatus
+    - cbgpPeer2State
     - 1.3.6.1.2.1.1.3
     - ifDescr
     - ifType
