--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -4,6 +4,8 @@ modules:
       - 1.3.6.1.2.1.197.1.2.1
       - 1.3.6.1.2.1.10.166.11.1.2.2.1.1
       - 1.3.6.1.2.1.10.166.11.1.3.1.1.3
+      - mplsL3VpnVrfPerfRoutesDeleted
+      - mplsL3VpnVrfPerfRoutesAdded
       - 1.3.6.1.2.1.15.3.1.7
       - 1.3.6.1.4.1.9.9.187.1.2.3.1.1
       - 1.3.6.1.4.1.9.9.187.1.2.3.1.2
