activate alertmanagers for new prometheis

--- a/global/prometheus-kubernetes/values.yaml
+++ b/global/prometheus-kubernetes/values.yaml
@@ -36,10 +36,9 @@ prometheus-kubernetes-global:
   secrets:
     - prometheus-sso-cert
 
-  # Disable alerting until the transition to the operated Prometheus was done in all regions.
-  # alertmanagers:
-  #  - alertmanager.eu-de-1.cloud.sap
-  #  - alertmanager.eu-nl-1.cloud.sap
+  # Send alerts to these alertmanagers.
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
 
 # List of metrics that get federated from the regional Prometheis.
 # Per convention all metrics with the `global:` prefix are federated.
