--- a/global/prometheus-kubernikus/values.yaml
+++ b/global/prometheus-kubernikus/values.yaml
@@ -30,10 +30,9 @@ prometheus-kubernikus-global:
   secrets:
     - prometheus-kubernikus-sso-cert
 
-  # Disable alerting until the transition to the operated Prometheus was done in all regions.
-  # alertmanagers:
-  #  - alertmanager.eu-de-1.cloud.sap
-  #  - alertmanager.eu-nl-1.cloud.sap
+  # Send alerts to these alertmanagers.
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
 
 # Basic alerts for global Prometheus.
 alerts:
