--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -129,10 +129,9 @@ prometheus-frontend-operated:
     endpoints:
       enabled: false
 
-  # Disable alerting until the transition to the operated Prometheus was done in all regions.
-  # alertmanagers:
-  #  - alertmanager.eu-de-1.cloud.sap
-  #  - alertmanager.eu-nl-1.cloud.sap
+  # Send alerts to these alertmanagers.
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
 
 # Deploy basic set of Prometheus alert and aggregation rules for monitoring Kubernetes.
 prometheus-kubernetes-rules:
