deactivate alerting on old prometheis

--- a/system/kube-monitoring/charts/prometheus-frontend/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/values.yaml
@@ -36,7 +36,7 @@ persistence:
 
 alerting:
   # disable all alerts by setting `false` here
-  enabled: true
+  enabled: false
   # disable kubernetes alerts by setting `false` here
   kubernetes: true
   # disable openstack alerts by setting `false` here
