adds ping-exporter chart

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -256,3 +256,7 @@ fluent-bit:
 # Disabled by default. Enabled via regional secrets.
 ns-exporter:
   enabled: false
+
+ping-exporter:
+  enabled: false
+  targets: []
