--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -57,6 +57,11 @@ dependencies:
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
 
+  - name: ping-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.0
+    condition: ping-exporter.enabled
+
   - name: oomkill-exporter
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.1.1
