--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -36,9 +36,9 @@ prometheus_infra_collector:
   additionalScrapeConfigs:
     name: infra-collector-additional-scrape-config
     key: scrape-config.yaml
-  configMaps:
-    - arista-sd
-    - atlas-sd
+  #configMaps:
+  #  - arista-sd
+  #  - atlas-sd
 
   ingress:
     enabled: true
