--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -71,7 +71,7 @@ cloudprober_exporter:
 netapp_exporter:
   enabled: false
 
-netapp-perf-exporter:
+netapp_perf_exporter:
   enabled: false
 
 arista_sd:
