[common][mysql] a helm chart for percona XtraDB operator and cluster (WIP)

--- a/openstack/barbican/requirements.yaml
+++ b/openstack/barbican/requirements.yaml
@@ -17,3 +17,7 @@ dependencies:
   - name: region_check
     repository: file://../../common/region_check
     version: 0.1.0
+  - name: percona
+    repository: file://../../common/percona
+    version: 0.1.1
+    condition: percona.enabled
