--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -61,6 +61,10 @@ postgresql:
       cpu: "500m" # 1/2 cpu
       memory: "300Mi" # 160Mi high recorded
 
+percona:
+  enabled: false
+  name: barbican
+
 pgmetrics:
   name: barbican
   db_name: barbican
