--- a/openstack/hermes/templates/es-manager-etc-configmap.yaml
+++ b/openstack/hermes/templates/es-manager-etc-configmap.yaml
@@ -1,9 +1,8 @@
-{{ if .Values.hermes.deploy_kibana }}
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: kibana-etc
+  name: es-manager-hermes-etc
   namespace: hermes
   labels:
     system: openstack
@@ -11,6 +10,5 @@ metadata:
     component: configuration
 
 data:
-  kibana.yml: |
-{{ include "hermes/templates/etc/_kibana.yml.tpl" . | indent 4 }}
-{{ end }}
+  elasticsearch-application.conf: |
+{{ include "hermes/templates/etc/_application.conf.tpl" . | indent 4 }}
