[grafanasix] reenable minitrue

--- a/openstack/grafanasix/templates/grafana-deployment.yaml
+++ b/openstack/grafanasix/templates/grafana-deployment.yaml
@@ -66,7 +66,7 @@ spec:
             - name: grafana-ds-certs
               mountPath: /grafana-ds-certs
 {{- end }}
-            - name: grafana-git
+            - name: grafana-content
               mountPath: /git
         - name: "gitsync"
           image: hub.global.cloud.sap/monsoon/git-sync:v3_1_1__linux_amd64
