more cAdvisor metrics

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -46,11 +46,14 @@ global:
 
 # Metric whitelist.
 allowedMetrics:
+  # Full list of metrics: https://github.com/google/cadvisor/blob/master/docs/storage/prometheus.md .
   cAdvisor:
     - container_cpu_cfs_periods_total
     - container_cpu_cfs_throttled_seconds_total
     - container_cpu_cfs_throttled_periods_total
     - container_cpu_usage_seconds_total
+    - container_cpu_user_seconds_total
+    - container_cpu_system_seconds_total
     - container_fs_inodes_total
     - container_fs_limit_bytes
     - container_fs_usage_bytes
@@ -59,6 +62,7 @@ allowedMetrics:
     - container_memory_working_set_bytes
     - container_network_receive_bytes_total
     - container_network_transmit_bytes_total
+    - container_start_time_seconds
 
   kubelet:
     - kubelet_pod_start_latency_microseconds
