adds link for full list of metrics

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -46,7 +46,7 @@ global:
 
 # Metric whitelist.
 allowedMetrics:
-  # Full list of metrics: https://github.com/google/cadvisor/blob/master/docs/storage/prometheus.md .
+  # Full list of cAdvisor metrics: https://github.com/google/cadvisor/blob/master/docs/storage/prometheus.md .
   cAdvisor:
     - container_cpu_cfs_periods_total
     - container_cpu_cfs_throttled_seconds_total
@@ -64,12 +64,14 @@ allowedMetrics:
     - container_network_transmit_bytes_total
     - container_start_time_seconds
 
+  # Full list of kubelet metrics: https://github.com/kubernetes/kubernetes/blob/master/pkg/kubelet/metrics/metrics.go#L33 .
   kubelet:
     - kubelet_pod_start_latency_microseconds
     - kubelet_running_pod_count
     - process_max_fds
     - process_open_fds
 
+  # Full list of APIserver metrics: https://github.com/kubernetes/apiserver/blob/master/pkg/endpoints/metrics/metrics.go .
   kubeAPIServer:
     - apiserver_request_count
     - apiserver_request_latencies_bucket
