push prom-infra.scaleout alerts to alert manager

--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -33,8 +33,8 @@ prometheus-infra-frontend:
     - prometheus-infra-frontend-sso-cert
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
-  # alertmanagers:
-  #  - alertmanager.eu-de-1.cloud.sap
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
   #  - alertmanager.eu-nl-1.cloud.sap
 
   # Kubernetes resource requests and limits for this Prometheus.
