fire prom-infra-collector alerts to alertmanager.eu-de-1.cloud.sap

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -61,8 +61,8 @@ prometheus_infra_collector:
   serviceAccount:
     create: true
 
-  # alertmanagers:
-  #  - alertmanager.eu-de-1.cloud.sap
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
   #  - alertmanager.eu-nl-1.cloud.sap
 
 cloudprober_exporter:
